Message generation now handles exceptions.